--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<div>
+		My current favourite song is <a target="_blank" href="https://www.youtube.com/watch?v=syFZfO_wfMQ">Night Changes</a> by One Direction
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
